created next fe with auth
